--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!-- google web font -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&family=Nunito:wght@400;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@500&family=Nanum+Gothic:wght@400;700&family=Nunito:wght@400;600&display=swap"
       rel="stylesheet"
     />
     <link
